# StrigidEngine

./: .gitignore  ASSEMBLY_ANALYSIS.md  BUILD_OPTIONS.md  CMakeLists.txt  ENGINE_PLAN.md  FRAGMENTATION_EXPLAINED.md  HOW_TO_VIEW_ASSEMBLY.md  MEMORY_ANALYSIS.md  MEMORY_PROFILING_GUIDE.md  READING_ASSEMBLY_GUIDE.md  README.md  SCHEMA_ERROR_EXAMPLES.md  StrigidEngine.sln  StrigidEngine.vcxproj  StrigidEngine.vcxproj.filters  WEEK4_TODO.md  cube.vert.spv  cube_frag.c  cube_vert.c  temp_vert.txt
StrigidEngine/: CMakeLists.txt
StrigidEngine/CMake/: cmake.txt
StrigidEngine/x64/Debug/: StrigidEngine.exe.recipe  StrigidEngine.ilk  vc143.idb
StrigidEngine/x64/Debug/StrigidEngine.tlog/: CL.write.1.tlog  link.secondary.1.tlog
Testbed/: CMakeLists.txt
Testbed/src/: CubeEntity.h  Main.cpp  TestEntity.h
docs/: ARCHITECTURE.md  BUILD_OPTIONS.md  CONFIGURATION.md  DATA_STRUCTURES.md  PERFORMANCE_TARGETS.md  SCHEMA_ERROR_EXAMPLES.md  STATUS.md
libs/tracy/public/: TracyClient.cpp
libs/tracy/public/client/: TracyProfiler.cpp
libs/tracy/public/common/: TracyProtocol.hpp
libs/tracy/public/tracy/: Tracy.hpp
shaders/: cube.vert  cube.vert.spv  cube_simple.vert
src/: StrigidEngine.cpp
src/Runtime/Components/Public/: ColorData.h  ComponentIDs.h  CubeEntity.h  Transform.h  Velocity.h
src/Runtime/Core/Private/: LogicThread.cpp  Main.cpp  StrigidEngine.cpp  Window.cpp  Window.cpp.orig
src/Runtime/Core/Public/: CompiledShaders.h  ComponentView.h  CubeMesh.h  EngineConfig.h  EntityView.h  FieldMeta.h  FieldProxy.h  FramePacket.h  LogicThread.h  Ref.h  Schema.h  SchemaReflector.h  SchemaValidation.h  SoAComponent.h  SoARef.h  StrigidEngine.h  Types.h  Window.h
src/Runtime/Input/Public/: Input.h
src/Runtime/Logging/Private/: Logger.cpp
src/Runtime/Logging/Public/: Logger.h
src/Runtime/Memory/Private/: Archetype.cpp  Archetype.cpp.orig  Registry.cpp  TemporalComponentCache.cpp
src/Runtime/Memory/Public/: Archetype.h  Chunk.h  Entity.h  EntityRecord.h  Registry.h  Signature.h  TemporalComponentCache.h
src/Runtime/Profiling/Public/: Profiler.h  TestEntity.h
src/Runtime/Rendering/Private/: FramePacer.h  RenderCommandBuffer.cpp  RenderThread.cpp  RenderThread_InterpolateToTransferBuffer.txt  RenderThread_changes.txt  Window.cpp  Window.cpp.backup
src/Runtime/Rendering/Public/: RenderCommandBuffer.h  RenderThread.h  SnapshotBuffer.h  Window.h
x64/Debug/StrigidEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  StrigidEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
